@startuml State Machine

title Order Saga State Machine

skinparam state {
    BackgroundColor<<init>> LightBlue
    BackgroundColor<<processing>> LightGreen
    BackgroundColor<<success>> Green
    BackgroundColor<<reverting>> Orange
    BackgroundColor<<failed>> Red
    BackgroundColor<<reverted>> Gray
}

[*] --> INIT <<init>>

state "Forward Flow" as forward {
    INIT <<init>> : Order created
    INIT --> PROCESSING : Hooks passed
    INIT --> FAILED : Hooks failed
    
    PROCESSING <<processing>> : Executing steps
    PROCESSING --> PROCESSING : Step succeeded\n(more steps)
    PROCESSING --> PENDING : Step waiting
    PROCESSING --> SUCCESS : Last step succeeded
    PROCESSING --> REVERTING : Step failed
    PROCESSING --> FAILED : First step failed
    
    PENDING <<processing>> : Waiting callback
    PENDING --> PROCESSING : Callback received
    PENDING --> REVERTING : Callback failed
}

state "Compensation Flow" as compensation {
    REVERTING <<reverting>> : Compensating
    REVERTING --> REVERTED : All compensated
    REVERTING --> REVERTING_PENDING : Waiting callback
    REVERTING --> REVERT_FAILED : Compensation failed
    
    REVERTING_PENDING <<reverting>> : Waiting
    REVERTING_PENDING --> REVERTING : Callback received
}

state "Recovery Flow" as recovery {
    RESUMING_PROCESSING : Resume forward
    RESUMING_PROCESSING --> PROCESSING
    RESUMING_PROCESSING --> SUCCESS
    RESUMING_PROCESSING --> REVERTING
    
    RESUMING_REVERTING : Resume compensation
    RESUMING_REVERTING --> REVERTING
    RESUMING_REVERTING --> REVERTED
}

SUCCESS <<success>> : Completed
FAILED <<failed>> : Failed (no compensation)
REVERTED <<reverted>> : Compensated
REVERT_FAILED <<failed>> : Manual intervention

SUCCESS --> [*]
FAILED --> [*]
REVERTED --> [*]
REVERT_FAILED --> [*]

note right of PENDING
    Recovery job will:
    1. Query step status
    2. Resume processing
end note

note right of REVERT_FAILED
    CRITICAL:
    Requires manual
    intervention
end note

@enduml
